# FootballGame

./: README.md
ProgramFiles/data/: GroupStageData.json
ProgramFiles/project/: CMakeLists.txt
ProgramFiles/project/inc/ApiCommunicator/: ApiCommunicator.hpp  IApiCommunicator.hpp
ProgramFiles/project/inc/DataManager/: DataManager.hpp  IDataManager.hpp
ProgramFiles/project/inc/DataParser/: IParser.hpp  IReader.hpp  Parser.hpp  Reader.hpp
ProgramFiles/project/inc/GuiManager/: GuiManager.hpp  IGuiManager.hpp
ProgramFiles/project/inc/Observer/: IObserver.hpp
ProgramFiles/project/inc/Timer/: ITimer.hpp  Timer.hpp
ProgramFiles/project/inc/Types/: EGroup.hpp  Team.hpp
ProgramFiles/project/inc/dataParser/: Parser.hpp
ProgramFiles/project/src/: main.cpp
ProgramFiles/project/src/ApiCommunicator/: ApiCommunicator.cpp
ProgramFiles/project/src/DataManager/: DataManager.cpp
ProgramFiles/project/src/DataParser/: Parser.cpp  Reader.cpp
ProgramFiles/project/src/GuiManager/: GuiManager.cpp
ProgramFiles/project/src/Timer/: Timer.cpp
ProgramFiles/project/src/dataParser/: Parser.cpp
ProgramFiles/project/test/DataParserTests/: ParserTests.cpp  ReaderTests.cpp
ProgramFiles/project/test/constants/: ParserTestFile.json  TestFile.json
ProgramFiles/project/test/dataParserTests/: ReaderTests.cpp
ProgramFiles/project/test/mocks/: ApiCommunicatorMock.hpp  ReaderMock.hpp
ProgramFiles/scripts/: create_json_files_with_data.py
